@@ -2,6 +2,7 @@
 [chg] string paths
 [upd] required changes for script.module.python.twitch v2.0.0 refactor
 [add] inputstream.adaptive support for versions >= 2.0.10
+[add] Revoke token
 [add] Hebrew strings [Eng2Heb]
 
 
